# fpipeline

./: .gitattributes  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
doc/examples/: examples.md  grid.ipynb
doc/examples/grid/: grid.ipynb  substations.csv  transmission.csv
src/fp-pipeline/: __init__.py  _version.py  fp-pipeline.py  requirements.txt
src/fpipeline/: __init__.py  _version.py  contexts.py  decorators.py  fpipeline.py  functions.py  steps.py  types.py  variables.py
test/: notebook_reporter.py  test.ipynb  tester.py  testing.py  tests.py
