[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "fpipeline"
version = "1.0.0"
authors = [
  { name="BobKerns", email="rwk@acm.org" },
]
description = "Functional Pipeline. A simple yet flexible pipeline package based on function composition."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bobkerns/fpipeline"
"Bug Tracker" = "https://github.com/bobkerns/fpipeline/issues"
