[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "fpipeline"
authors = [
  { name="BobKerns", email="rwk@acm.org" },
]
dynamic = [
    "version",
    "description"
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]


[project.urls]
"Homepage" = "https://github.com/bobkerns/fpipeline"
"Bug Tracker" = "https://github.com/bobkerns/fpipeline/issues"
